[gd_scene load_steps=2 format=2]

[ext_resource path="res://loadHUD.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="loadHUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="nameList" type="ItemList" parent="loadHUD"]
margin_left = 283.0
margin_top = 93.0
margin_right = 660.0
margin_bottom = 394.0

[node name="loadButton" type="Button" parent="loadHUD"]
margin_left = 293.0
margin_top = 432.0
margin_right = 654.0
margin_bottom = 482.0
text = "Load Profile"

[node name="loadErrorLabel" type="Label" parent="loadHUD"]
margin_left = 299.914
margin_top = 43.1694
margin_right = 339.914
margin_bottom = 57.1694

[connection signal="pressed" from="loadHUD/loadButton" to="loadHUD" method="_on_Button_pressed"]
